[package]
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"
name = "cipher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphabet = {path = "../alphabet"}
derive_builder = "0.10"
masc = {path = "../masc"}
pasc = {path = "../pasc"}
transposition = {path = "../transposition"}
