[package]
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"
name = "cryptosystem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphabet = {path = "../alphabet"}
cipher = {path = "../cipher"}
derive_builder = "0.11"
lfg = {path = "../lfg"}
masc = {path = "../masc"}
num = "0.3"
pasc = {path = "../pasc"}
translation = {path = "../translation"}
transposition = {path = "../transposition"}
