[package]
name = "masc"
version = "0.1.0"
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num = "0.3"
alphabet = { path = "../alphabet" }
cipher = { path = "../cipher" }
lcg = { path = "../lcg" }
message = { path = "../message" }
std_ext = { path = "../std_ext" }
derive_builder = "0.10"
