[package]
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"
name = "pasc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphabet = {path = "../alphabet"}
cipher = {path = "../cipher"}
derive_builder = "0.11"
masc = {path = "../masc"}
num = "0.4"
std_ext = {path = "../std_ext"}
transposition = {path = "../transposition"}
