[package]
authors = ["Andrew Merenbach <andrew@merenbach.com>"]
edition = "2021"
name = "std_ext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
num = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
